# metagent

./: .gitignore  Cargo.toml  README.md  install.sh  metagent.sh  spec.md  sync.sh
.agents/code/: AGENTS.md  SPEC.md  TECHNICAL_STANDARDS.md  queue.jsonl
.agents/code/sessions/1768588597-24389/: session.json
.agents/code/tasks/test-count/: plan.md
.agents/code/tasks/test-count/spec/: overview.md
.agents/code/tasks/test-goodbye/: PROMPT.md  plan.md
.agents/code/tasks/test-goodbye/spec/: overview.md
.agents/code/tasks/test-hello/: PROMPT.md  plan.md
.agents/code/tasks/test-hello/spec/: overview.md
code/: agent.sh
code/how/: commit.md  plan-update.md
code/prompts/: BOOTSTRAP_PROMPT.md  BUILD_PROMPT.md  DEBUG_PROMPT.md  PLANNING_PROMPT.md  README.md  RECOVERY_PROMPT.md  REFRESH_PROMPT.md  RESEARCH_PROMPT.md  REVIEW_PROMPT copy.md  REVIEW_PROMPT.md  SPEC_EXISTING_TASK_PROMPT.md  SPEC_PROMPT.md  SPEC_REVIEW_ISSUES_PROMPT.md  SPEC_REVIEW_PROMPT.md  SUBMIT_HOLD_TASK_PROMPT.md  SUBMIT_ISSUE_PROMPT.md  SUBMIT_TASK_PROMPT.md
code/scripts/: spec.sh
code/templates/: AGENTS.md
skills/metagent-cli/: SKILL.md
skills/metagent-code-cli/: SKILL.md
skills/metagent-writer-cli/: SKILL.md
src/: agent.rs  assets.rs  commands.rs  issues.rs  main.rs  model.rs  prompt.rs  state.rs  util.rs
tests/: codex_exit.rs  integration.rs
tools/: build.sh
writer/: agent.sh
writer/prompts/: EDITOR_PROMPT.md  INIT_PROMPT.md  PLANNING_PROMPT.md  PROMPT.md  README.md
writer/templates/: AGENTS.md  WRITER.md
