[package]
name = "mung"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
hostname = "0.3"
ctrlc = "3.4"
libc = "0.2"
owo-colors = "4.0"

[dev-dependencies]
tempfile = "3.12"
